fixed spacing on homepage

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -448,7 +448,7 @@ ul .main-nav:nth-of-type(1) {
 
 #hero-container {
     padding-top: 10em;
-    margin-bottom: 12.5%;
+    margin-bottom: 10.5%;
 }
 #nina-img {
     display: none;
@@ -676,7 +676,7 @@ ul .main-nav:nth-of-type(1) {
         flex-direction: row;
         justify-content: space-between;
         padding-top: 14em;
-        margin-bottom: 25em;
+        margin-bottom: 10.5%;
     }
 
     #hero-text {
@@ -813,7 +813,7 @@ ul .main-nav:nth-of-type(1) {
 @media screen and (min-height: 720px) {
 
     #hero-container {
-        margin-bottom: 12.5%;
+        margin-bottom: 10.5%;
     }
 
 }
